--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.32
-pandas
-numpy
-matplotlib
-seaborn
+streamlit>=1.32.0
+pandas>=2.0.0
+numpy>=1.24.0  # Only if needed
+reportlab      # For generating PDFs (optional)
+fpdf           # Alternative lightweight PDF generator (optional)
